# fastq

./: README.md  fastq.cabal  stack.yaml
src/: Main.hs
