name:                fastq
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/faineance/fastq#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           faineance
category:            Other
build-type:          Simple
cabal-version:       >=1.10


executable fastq
    main-is: Main.hs
    build-depends:
        base -any,
        parsec -any,
        mtl -any
    default-language: Haskell2010
    hs-source-dirs: src
    ghc-options: -Wall
